hosting + domain done

--- a/angular/src/app/stock/stock.component.html
+++ b/angular/src/app/stock/stock.component.html
@@ -81,7 +81,7 @@
 
 		>
 			<app-data-table 
-				[hidden]="!user.tableData?.[activeView][user.dbKey]"
+				[hidden]="!user.tableData[activeView][user.dbKey]"
 				[gridOptions]="gridOptions"
 				[rowData]="user.tableData?.[activeView][user.dbKey]"
 				[defaultColDef]="defaultColDef"
