--- a/angular/src/app/stock/stock.component.html
+++ b/angular/src/app/stock/stock.component.html
@@ -1,12 +1,11 @@
 <div>
 	<div id="flexWrapper">
-		<div id="wrapper1">
-		
+		<div id="wrapper1">		
 			<nav id="mainNavbar" class="m-0 p-1 navbar sticky-top navbar-light bg-light">
 				<div class="p-0 container-fluid">
-					<div class="d-flex">
+					<div class="d-flex p-0 container-fluid">
 						<button 
-							class="btn btn-outline-secondary btn-sm" 
+							class="btn btn-outline-secondary btn-sm ms-1 me-0" 
 							(click)="_offCanvas.open(mainOffcanvasContent)" 
 							type="button"
 						>
@@ -14,7 +13,7 @@
 						</button>
 						<div 
 							ngbDropdown 
-							class="ms-1"
+							class="ms-1 me-auto"
 						>
 							<button 
 								ngbDropdownToggle 
@@ -37,110 +36,29 @@
 								</button>
 							</div>
 						</div>
-					</div>	
-					
-					<div class="d-flex">
 						<input 
-							class="form-control form-control-sm me-1" 
+							class="form-control form-control-sm ms-auto me-1" 
 							type="search" 
 							placeholder="Cari.." 
+							[style.width]='"auto"'
 							aria-label="Search"
 							(input)="filter.search($event)"
 						>
 						<button 
-							class="btn btn-outline-secondary btn-sm" 
+							class="btn btn-outline-secondary btn-sm ms-0 me-1" 
 							type="button"
 							(click)="_offCanvas.open(filterOffcanvassContent)" 
 						>
 							Filter
 						</button>
-					</div>
-					
+					</div>			
 				</div>
 			</nav>
-			
-			<!--
-			<nav id="mainNavbar" class="m-0 p-1 navbar sticky-top navbar-light bg-light">
-				<div class="container px-1">
-					<div>
-						<button 
-							class="float-start btn btn-outline-secondary btn-sm" 
-							(click)="_offCanvas.open(mainOffcanvasContent)" 
-							type="button"
-						>
-							=
-						</button>
-						<div 
-							ngbDropdown 
-							class="float-start ms-1"
-						>
-							<button 
-								ngbDropdownToggle 
-								class="btn btn-secondary btn-sm dropdown-toggle" 
-								type="button"
-							>
-								{{activeView|titlecase}}
-							</button>
-							<div 
-								ngbDropdownMenu 
-								class="dropdown-menu"
-							>
-								<button 
-									ngbDropdownItem 
-									*ngFor="let a of Object.keys(defaultTableData)"
-									(click)="setView(a)"
-									type="button"
-								>
-									{{a|titlecase}}
-								</button>
-							</div>
-						</div>	
-						
-					</div>
-					<div class="d-flex">
-						<input 
-							class="form-control form-control-sm me-1" 
-							type="search" 
-							placeholder="Cari.." 
-							aria-label="Search"
-							(input)="filter.search($event)"
-						>
-						<button 
-							class="btn btn-outline-secondary btn-sm" 
-							type="button"
-							(click)="_offCanvas.open(filterOffcanvassContent)" 
-						>
-							Filter
-						</button>
-					</div>
-				</div>
-			</nav>
-			-->
-			
-			<!-- OPERATION MODE -->
-			<!--				
-			<div ngbDropdown class="float-start ms-1"> 
-				<button ngbDropdownToggle class="btn  btn-secondary btn-sm dropdown-toggle" type="button">
-					{{operation.active|titlecase}}
-					<!--{{misc.toUpperCase(operation.active)}}--><!--
-				</button>
-				<div ngbDropdownMenu class="dropdown-menu">
-					<button 
-						ngbDropdownItem
-						*ngFor="let operationPointer of Object.keys(operation.mode)"
-						(click)="operation.changeOperation(operationPointer)"
-						type="button"
-					>
-						{{operationPointer|titlecase}}
-					</button>
-				</div>
-			</div>	
-			-->					
-			
 		<div id="gridTable"
 			[style.width]="tableContainerStyle.width"
 			[style.height]="tableContainerStyle.height"
 			[style.min-width]="'50%'"
+			class="m-auto"
 
 		>
 			<app-data-table 
