--- a/angular/src/app/stock/stock.component.html
+++ b/angular/src/app/stock/stock.component.html
@@ -1,11 +1,12 @@
 <div>
 	<div id="flexWrapper">
 		<div id="wrapper1">		
-			<nav id="mainNavbar" class="m-0 p-1 navbar sticky-top navbar-light bg-light">
-				<div class="p-0 container-fluid">
-					<div class="d-flex p-0 container-fluid">
+			<nav id="mainNavbar" class="m-0 p-0 navbar sticky-top navbar-light bg-light">
+				<div class="d-flex justify-content-between p-1" [style.width]="'100%'">
+				
+					<div class="d-flex justify-content-start">
 						<button 
-							class="btn btn-outline-secondary btn-sm ms-1 me-0" 
+							class="btn btn-outline-secondary btn-sm me-1" 
 							(click)="_offCanvas.open(mainOffcanvasContent)" 
 							type="button"
 						>
@@ -13,11 +14,12 @@
 						</button>
 						<div 
 							ngbDropdown 
-							class="ms-1 me-auto"
+							class=""
 						>
 							<button 
 								ngbDropdownToggle 
 								class="btn btn-secondary btn-sm dropdown-toggle" 
+								[style.height]="'100%'"
 								type="button"
 							>
 								{{activeView|titlecase}}
@@ -36,23 +38,26 @@
 								</button>
 							</div>
 						</div>
+					</div>
+					
+					<div class="d-flex justify-content-end px-1">
 						<input 
-							class="form-control form-control-sm ms-auto me-1" 
+							class="form-control form-control-sm" 
 							type="search" 
 							placeholder="Cari.." 
-							[style.width]='"auto"'
 							aria-label="Search"
 							(input)="filter.search($event)"
 						>
 						<button 
-							class="btn btn-outline-secondary btn-sm ms-0 me-1" 
+							class="btn btn-outline-secondary btn-sm ms-1" 
 							type="button"
 							(click)="_offCanvas.open(filterOffcanvassContent)" 
 						>
 							Filter
 						</button>
-					</div>			
-				</div>
+					</div>
+					
+				</div>			
 			</nav>
 		<div id="gridTable"
 			[style.width]="tableContainerStyle.width"
@@ -186,7 +191,6 @@
 		<button type="button" class="btn-close ms-auto" (click)="filterCanvas.dismiss('Cross click')" aria-label="Close"></button>
 	</div>
 	<div *ngIf="activeView==='stock'" class="container-fluid">
-
 		<button (click)="filter.setDefaultFilter('STOCK')">Reset</button>
 		<hr>
 		<div class="row mb-1">
@@ -206,8 +210,6 @@
 							&&
 							options.data.filterParams[activeView].STOCK.type==='greaterThanOrEqual'"
 					>
-					
-					
 						Ada
 					</option>
 					<option
