TRANSACTION EXCEL UPLOAD PT 1

--- a/angular_frontEnd_mySql/src/app/stock/stock.component.html
+++ b/angular_frontEnd_mySql/src/app/stock/stock.component.html
@@ -118,6 +118,7 @@
 		<div class="row">
 			<div class="col">
 				<app-upload 
+					[buttonLabel]="'Upload '+activeView"
 					[currentPage]="activeView"
 					[uploadHandler]="_excel.postExcel"
 				></app-upload>
