--- a/angular_frontEnd_mySql/src/app/misc/upload/upload.component.html
+++ b/angular_frontEnd_mySql/src/app/misc/upload/upload.component.html
@@ -1,7 +1,7 @@
 <button 
 	onclick="(()=>document.getElementById('uploadButtonId1').click())()" 
 	class="upload-btn"
->Upload
+>{{buttonLabel}}
 </button>
 
 <input hidden id="uploadButtonId1" (input)="uploadHandler(currentPage,$event)" type="file">
