--- a/angular_frontEnd_mySql/src/app/stock/stock.component.html
+++ b/angular_frontEnd_mySql/src/app/stock/stock.component.html
@@ -115,7 +115,10 @@
 			[pages]="navigationPages"
 		></app-navigation>
 		-->
-		<div class="row">
+		<div 
+			class="row"
+			*ngIf="user.isLogin"
+		>
 			<div class="col">
 				<app-upload 
 					[buttonLabel]="'Upload '+activeView"
@@ -168,10 +171,25 @@
 		<div class="btn-group btn-group-sm" role="group">
 			<button type="button" class="btn btn-outline-secondary btn-sm" (click)="_excel.downloadExcel(activeView)">Download</button>
 			<button type="button" class="btn btn-outline-secondary btn-sm" (click)="refreshPage(activeView)">Refresh</button>
-			<button type="button" class="btn btn-outline-secondary btn-sm" (click)="delete(getAllAgGridRows(),'stock')">Delete All</button>
-			<button type="button" class="btn btn-outline-secondary btn-sm" (click)="modal.modal_3.openModal()">Tambah Data</button>
+			<button 
+				type="button" 
+				class="btn btn-outline-secondary btn-sm" 
+				(click)="delete(getAllAgGridRows(),'stock')"
+				*ngIf="user.isLogin"
+			>Delete All</button>
+			<button 
+				type="button" 
+				class="btn btn-outline-secondary btn-sm" 
+				(click)="modal.modal_3.openModal()"
+				*ngIf="user.isLogin"
+			>Tambah Data</button>
 			<button type="button" class="btn btn-outline-secondary btn-sm" (click)="misc.reset()">Reset</button>
-			<button type="button" class="btn btn-outline-secondary btn-sm" (click)="console.log('debugThis : ',debugThis)"><-></button>
+			<button 
+				type="button" 
+				class="btn btn-outline-secondary btn-sm" 
+				(click)="console.log('debugThis : ',debugThis)"
+				*ngIf="user.isLogin"
+			><-></button>
 		</div>
 	</div>
 	<hr>
