--- a/angular_frontEnd_mySql/src/app/stock/stock.component.html
+++ b/angular_frontEnd_mySql/src/app/stock/stock.component.html
@@ -126,6 +126,17 @@
 					[uploadHandler]="_excel.postExcel"
 				></app-upload>
 			</div>
+			<div class="col">
+				<button
+					type="button"
+					(click)="quickEdit.toggleIsActive()"
+					class="btn btn-secondary btn-sm"
+					[ngClass]="quickEdit.isActive?'active':''"
+				>
+					quickEdit
+				</button>
+				
+			</div>
 		</div>
 		<div class="d-flex mb-1">
 			<div class="ms-0 me-auto">
@@ -133,16 +144,18 @@
 			</div>
 			<div class="ms-auto me-0">
 				<!--
-				<button type="button" class="py-0 px-1 m-0 btn btn-outline-secondary btn-sm" (click)="user.prompt()">Ganti User</button>
+				<button type="button" class="py-0 px-1 m-0 btn btn-secondary-secondary btn-sm" (click)="user.prompt()">Ganti User</button>
 				-->
 				<button 
 					*ngIf="!user.isLogin"
+					class="btn btn-secondary btn-sm"
 					(click)="userAuth.formVisibility=!userAuth.formVisibility"
 				>
 					ganti user
 				</button>
 				<button 
 					*ngIf="user.isLogin"
+					class="btn btn-secondary btn-sm"
 					(click)="userAuth.logout()"
 				>
 					logout
