--- a/angular_frontEnd_mySql/src/app/xt/xt.component.html
+++ b/angular_frontEnd_mySql/src/app/xt/xt.component.html
@@ -1,31 +1,34 @@
 <div>		
 	<nav id="mainNavbar" class="m-0 p-0 navbar sticky-top navbar-light bg-light">
-		<div class="d-flex justify-content-between p-1" [style.width]="'100%'">
-			<div class="d-flex justify-content-start">
-				<button 
-					class="btn btn-outline-secondary btn-sm me-1" 
-					(click)="_offCanvas.open(mainOffcanvasContent)" 
-					type="button"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
-			</div>
-			<div class="d-flex justify-content-end px-1">
-				<input 
-					class="form-control form-control-sm" 
-					type="search" 
-					placeholder="Cari.." 
-					aria-label="Search"
-					(input)="filter.search($event)"
-				>
-			</div>
-		</div>			
+		<div class="container-fluid py-1">
+			<div class="d-flex flex-row" [style.width]="'100%'">
+				<div class="">
+					<button 
+						class="btn btn-outline-secondary btn-sm me-1" 
+						(click)="_offCanvas.open(mainOffcanvasContent)" 
+						type="button"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+				</div>
+				<div class="">
+					<input 
+						class="form-control form-control-sm" 
+						type="search" 
+						placeholder="Cari.." 
+						aria-label="Search"
+						(input)="filter.search($event)"
+					>
+				</div>
+			</div>			
+		</div>
 	</nav>
 </div>
 
 <div class="container-fluid">
 	<ag-grid-angular
-		style="width: 100%; height: 700px;"
+		style="width: 100%;"
+		[style.height]="getTableHeight()+'px'"
 		class="ag-theme-alpine"
 		[gridOptions]="gridOptions"
 		[defaultColDef]="defaultColDef"
@@ -36,6 +39,9 @@
 
 <ng-template #mainOffcanvasContent let-settingCanvas>
 	<div class="offcanvas-header">
+		<h3
+			(click)="setUserName()"
+		>{{userName}}</h3>
 		<button type="button" class="btn-close ms-auto" (click)="settingCanvas.dismiss('Cross click')" aria-label="Close"></button>
 	</div>
 	<div class="container-fluid mb-1">
@@ -44,6 +50,7 @@
 		>
 			<div class="col">
 				<app-upload 
+					hidden
 					[buttonLabel]="'Upload'"
 					[currentPage]="''"
 					[uploadHandler]="excel.upload"
@@ -51,15 +58,29 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid" >
+	<div 
+		class="container-fluid" 
+		*ngIf="isP()"
+	>
 		<div class="btn-group btn-group-sm" role="group">
-			<button type="button" class="btn btn-outline-secondary btn-sm" (click)="''">Download</button>
 			<button 
 				type="button" 
 				class="btn btn-outline-secondary btn-sm" 
-				(click)="''"
-			>Delete</button>
-			<button type="button" class="btn btn-outline-secondary btn-sm" (click)="''">Reset</button>
+				onclick="(()=>document.getElementById('uploadButtonId1').click())()"
+				>Upload
+			</button>
+			<button 
+				type="button" 
+				class="btn btn-outline-secondary btn-sm" 
+				(click)="excel.download(this.gridData,fileName)"
+				>Download
+			</button>
+			<button 
+				type="button" 
+				class="btn btn-outline-secondary btn-sm" 
+				(click)="excel.delete()"
+				>Delete
+			</button>
 			<button 
 				type="button" 
 				class="btn btn-outline-secondary btn-sm" 
