xt : implementing basic cache, testing build  + dist

--- a/angular_frontEnd_mySql/src/app/xt/xt.component.html
+++ b/angular_frontEnd_mySql/src/app/xt/xt.component.html
@@ -52,7 +52,7 @@
 	<div class="offcanvas-header">
 		<h3
 			(click)="setUserName()"
-		>{{userName}}</h3>
+		>{{userName.value}}</h3>
 		<button type="button" class="btn-close ms-auto" (click)="settingCanvas.dismiss('Cross click')" aria-label="Close"></button>
 	</div>
 	<div class="container-fluid mb-1">
