--- a/angular_frontEnd_mySql/src/app/xt/xt.component.html
+++ b/angular_frontEnd_mySql/src/app/xt/xt.component.html
@@ -95,6 +95,18 @@
 			<button 
 				type="button" 
 				class="btn btn-outline-secondary btn-sm" 
+				(click)="getTable()"
+				>Refresh
+			</button>
+			<button 
+				type="button" 
+				class="btn btn-outline-secondary btn-sm" 
+				(click)="debugDeletAllIndexDb()"
+				>delDb
+			</button>
+			<button 
+				type="button" 
+				class="btn btn-outline-secondary btn-sm" 
 				(click)="debugThis()"
 			><-></button>
 		</div>
